--- a/src/Header.css
+++ b/src/Header.css
@@ -46,11 +46,24 @@
     color: #2e81f4;
 }
 
+.header__option--active > .MuiSvgIcon-root {
+    color:#2e81f4;
+}
+.header__option--active {
+    border-bottom: 4px solid #2e81f4;
+}
+
 .header__option {
     display: flex;
     align-items: center;
     padding: 0 30px;
     cursor: pointer;
+}
+
+@media (max-width: 870px) {
+    .header__option {
+        display:none;
+    }
 }
 
 .header__option:hover {
@@ -60,3 +73,17 @@
     padding: 0 30px;
     border-bottom:none;
 }
+
+.header__info {
+    display: flex;
+    align-items: center;
+}
+
+.header__info > h4 {
+    margin-left: 10px;
+}
+
+.header__right {
+    display: flex;
+}
+
